Add shared library support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,17 @@ if (UNIX)
 endif()
 
 add_library(smbios_static STATIC "smbios.c")
-target_include_directories(smbios_static
-    PUBLIC "include")
+target_include_directories(smbios_static PUBLIC "include")
 set_target_properties(smbios_static PROPERTIES
     OUTPUT_NAME "smbios"
     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
+    PREFIX "lib" )
+
+add_library(smbios_shared SHARED "smbios.c")
+target_include_directories(smbios_shared PUBLIC "include")
+set_target_properties(smbios_shared PROPERTIES
+    OUTPUT_NAME "smbios"
     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
     PREFIX "lib" )
 
 add_executable(smbios_decode "smbios_decode.c")
