Fix return of smbios entry information (#11)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,20 @@
+cmake_minimum_required(VERSION 3.5)
 project(smbios-parser)
 
-cmake_minimum_required(VERSION 3.5)
+if (CMAKE_BUILD_TYPE STREQUAL "")
+    message(STATUS "No build type selected, default to 'Release'")
+    set(CMAKE_BUILD_TYPE "Release")
+endif()
 
 if (UNIX)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wfatal-errors -fvisibility=hidden -Wfatal-errors -pedantic -std=c99 -Wl,--no-undefined -fPIC -Wall -Wextra -Wconversion -Werror=return-type -Werror=incompatible-pointer-types -Werror=sign-compare -Werror=sign-conversion")
     set(CMAKE_C_FLAGS_RELEASE  "${CMAKE_C_FLAGS_RELEASE} -s -O3")
     set(CMAKE_C_FLAGS_DEBUG  "${CMAKE_C_FLAGS_DEBUG} -g -O0")
+
+    set(ENABLE_SANITIZER OFF CACHE BOOL "Enable address sanitizer")
+    if (ENABLE_SANITIZER)
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address")
+    endif()
 endif()
 
 add_library(smbios_static STATIC "smbios.c")
